After running test export on all datasets, cleaned up variable names, code flow in Jupyter Notebook, addressed RAP issue, cleaned up properties in output images

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "To dos  \n",
     "1) Handle custom bin widths of histograms for categorical datasets  \n",
-    "2) Generate preprocessing scripts for other datasets  "
+    "2) Generate preprocessing scripts for other datasets \n",
+    "3) Make sure datetimes are set as system:timestart for filtering"
    ]
   },
   {
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -56,10 +57,7 @@
     "\n",
     "# Define time period to export\n",
     "start_date = datetime.datetime(2022, 1, 1)\n",
-    "end_date = datetime.datetime(2022, 6, 1)\n",
-    "\n",
-    "# Define whether to initialize new image collection or append to existing image collection\n",
-    "process = 'append' # 'initialize' or 'append'\n",
+    "end_date = datetime.datetime(2022, 7, 1)\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
@@ -76,7 +74,7 @@
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
     "\n",
     "# Define input path for Feature Collection\n",
-    "in_fc_path = 'projects/dri-apps/assets/blm-admin/BLM_Natl_Grazing_Allotment_Polygons_Simplified_clean'\n",
+    "in_fc_path = 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons-simplified-clean'\n",
     "in_fc = ee.FeatureCollection(in_fc_path)\n",
     "\n",
     "# Specify ID property\n",
@@ -86,114 +84,81 @@
     "# geometry = ee.Geometry.Polygon([[[-108.4020, 38.7855], [-108.4020, 39.6080], [-109.1823, 39.6080], [-109.1823, 38.7855]]], None, False);\n",
     "# in_fc = in_fc.filterBounds(geometry)\n",
     "\n",
-    "# Use full Feature Collection\n",
-    "in_fc = in_fc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ---------------------------- Additional parameters derived from above --------------------------------\n",
+    "\n",
     "# Define input Image Collection paths using dataset dictionary\n",
     "in_ic_dict = {'GridMET_Drought': {'in_ic_paths': ['GRIDMET/DROUGHT'],\n",
-    "                                  'var_names': ['long_term_drought_blend', 'short_term_drought_blend'],\n",
-    "                                  'var_type': 'categorical'},\n",
+    "                                  'var_names': ['Long_Term_Drought_Blend', 'Short_Term_Drought_Blend'],\n",
+    "                                  'var_type': 'Categorical'},\n",
     "             'RAP_Cover': {'in_ic_paths': ['projects/rap-data-365417/assets/vegetation-cover-v3'],\n",
     "                           'var_names': ['AFG', 'BGR', 'LTR', 'PFG', 'SHR', 'TRE'],\n",
-    "                           'var_type': 'continuous'},\n",
+    "                           'var_type': 'Continuous'},\n",
     "             'RAP_Production': {'in_ic_paths': ['projects/rap-data-365417/assets/npp-partitioned-v3'],\n",
     "                                'var_names': ['afgAGB', 'pfgAGB', 'herbaceousAGB'],\n",
-    "                                'var_type': 'continuous'},\n",
+    "                                'var_type': 'Continuous'},\n",
     "             'USDM': {'in_ic_paths': ['projects/climate-engine/usdm/weekly'],\n",
     "                      'var_names': ['drought'],\n",
-    "                      'var_type': 'categorical'},\n",
+    "                      'var_type': 'Categorical'},\n",
     "             'MOD11_LST': {'in_ic_paths': ['MODIS/061/MOD11A2'],\n",
     "                           'var_names': ['LST_Day_1km'],\n",
-    "                           'var_type': 'continuous'},\n",
+    "                           'var_type': 'Continuous'},\n",
     "             'MOD16_ET': {'in_ic_paths': ['MODIS/061/MOD16A2'],\n",
     "                          'var_names': ['ET', 'PET'],\n",
-    "                          'var_type': 'continuous'}}\n",
+    "                          'var_type': 'Continuous'}}\n",
     "\n",
     "# Define land unit names\n",
-    "if(in_fc_path == 'projects/dri-apps/assets/blm-admin/BLM_Natl_Grazing_Allotment_Polygons_Simplified_clean'):\n",
-    "    land_unit_long = 'blm-natl-grazing-allotment-polygons'\n",
-    "    land_unit_short = 'blm-allotments'\n",
-    "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/BLM_Natl_Admu_FieldOffice_Polygons'):\n",
-    "    land_unit_long = 'blm-natl-fieldoffice-polygons'\n",
-    "    land_unit_short = 'blm-fieldoffices'\n",
-    "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/BLM_Natl_Admu_DistrictOffice_Polygons'):\n",
-    "    land_unit_long = 'blm-natl-districtoffice-polygons'\n",
-    "    land_unit_short = 'blm-districtoffices'\n",
-    "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/BLM_Natl_Admu_StateOffice_Polygons'):\n",
-    "    land_unit_long = 'blm-natl-stateoffice-polygons'\n",
-    "    land_unit_short = 'blm-stateoffices'\n",
+    "if(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons-simplified-clean'):\n",
+    "    land_unit_long = 'BLM_Natl_Grazing_Allotment_Polygons'\n",
+    "    land_unit_short = 'BLM_Allotments'\n",
+    "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-admu-statesoffice_polygons'):\n",
+    "    land_unit_long = 'BLM_Natl_FieldOffice_Polygons'\n",
+    "    land_unit_short = 'BLM_FieldOffices'\n",
+    "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-admu-districtoffice_polygons'):\n",
+    "    land_unit_long = 'BLM_Natl_DistrictOffice_Polygons'\n",
+    "    land_unit_short = 'BLM_DistrictOffices'\n",
+    "elif(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-admu-fieldoffice_polygons'):\n",
+    "    land_unit_long = 'BLM_Natl_StateOffice_Polygons'\n",
+    "    land_unit_short = 'BLM_StateOffices'\n",
     "    \n",
     "# Pull out additional variables needed to run exports\n",
     "in_ic_paths = in_ic_dict.get(in_ic_name).get('in_ic_paths')\n",
     "var_type = in_ic_dict.get(in_ic_name).get('var_type')\n",
-    "out_path = f\"projects/dri-apps/assets/blm-database/{land_unit_short.replace('-', '')}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '')}\""
+    "out_path = f\"projects/dri-apps/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize the EE Image Collection and add ID band"
+    "## Create database image collection and append time-series images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if process == 'initialize':\n",
-    "       \n",
-    "    # Create dictionary of properties\n",
-    "    properties = {'system:index': '0_id', 'land_unit': land_unit_long, 'in_fc_path': in_fc_path, 'in_fc_id': in_fc_id,\n",
-    "                  'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'var_type': var_type, 'var_name': var_name}\n",
-    "    \n",
-    "    # Apply ID image function to input feature collection\n",
-    "    out_list = eedb_cor.generate_id_img(in_fc = in_fc, in_fc_id = in_fc_id)\n",
-    "    out_i = ee.Image(out_list.get(0))\n",
-    "    out_fc = ee.FeatureCollection(out_list.get(1))\n",
-    "    \n",
-    "    # Generate empty Image Collection asset to append images\n",
-    "    os.system(f\"earthengine create collection {out_path}\")\n",
-    "    \n",
-    "    # Export ID image to new Image Collection\n",
-    "    task = ee.batch.Export.image.toAsset(\n",
-    "        image = out_i.set(properties),\n",
-    "        description = f\"Initialize - {land_unit_short.replace('-', '')} {in_ic_name.replace('_', '').lower()} {var_name.replace('_', '')} - id\",\n",
-    "        assetId = out_path + '/0_id',\n",
-    "        region = out_fc.geometry().buffer(20),\n",
-    "        scale = 22.264,\n",
-    "        maxPixels = 1e13)\n",
-    "    task.start()\n",
-    "\n",
-    "else:\n",
-    "    print('Identify \"initialize\" as your process to run this cell.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pre-process input image collection and loop over dates to produce and export database images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['20220101', '20220109', '20220117', '20220125', '20220202', '20220210', '20220218', '20220226', '20220306', '20220314', '20220322', '20220330', '20220407', '20220415', '20220423', '20220501', '20220509', '20220517', '20220525']\n",
+      "{\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-et\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-et\",\n",
+      "  \"type\": \"IMAGE_COLLECTION\",\n",
+      "  \"updateTime\": \"2023-04-07T16:16:21.940880Z\"\n",
+      "}\n",
+      "{\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-et\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-et\",\n",
+      "  \"type\": \"IMAGE_COLLECTION\",\n",
+      "  \"updateTime\": \"2023-04-07T16:16:21.940880Z\"\n",
+      "}\n",
+      "Appending to Image Collection for dates 2022-01-01 00:00:00 - 2022-07-01 00:00:00\n",
       "Running 20220101\n",
       "Running 20220109\n",
       "Running 20220117\n",
@@ -212,14 +177,49 @@
       "Running 20220501\n",
       "Running 20220509\n",
       "Running 20220517\n",
-      "Running 20220525\n"
+      "Running 20220525\n",
+      "Running 20220602\n",
+      "Running 20220610\n",
+      "Running 20220618\n",
+      "Running 20220626\n"
      ]
     }
    ],
    "source": [
-    "if process == 'append':\n",
+    "# If there is no Image Collection asset at the out_path create one and export ID image\n",
+    "if os.system(f\"earthengine asset info {out_path}\") == 256:\n",
     "\n",
-    "    # ------------------------ Preprocess input Image Collection based on path --------------------------\n",
+    "    print(\"Initializing Image Collection by creating EE asset and exporting ID image\")\n",
+    "    \n",
+    "    # Create dictionary of properties\n",
+    "    properties = {'system:index': '0_id', 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path, 'in_fc_id': in_fc_id,\n",
+    "                  'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'var_type': var_type, 'var_name': var_name}\n",
+    "    \n",
+    "    # Apply ID image function to input feature collection\n",
+    "    out_list = eedb_cor.generate_id_img(in_fc = in_fc, in_fc_id = in_fc_id)\n",
+    "    out_i = ee.Image(out_list.get(0))\n",
+    "    out_fc = ee.FeatureCollection(out_list.get(1))\n",
+    "    \n",
+    "    # Generate empty Image Collection asset to append images\n",
+    "    os.system(f\"earthengine create collection {out_path}\")\n",
+    "    \n",
+    "    # Export ID image to new Image Collection\n",
+    "    task = ee.batch.Export.image.toAsset(\n",
+    "        image = out_i.set(properties),\n",
+    "        description = f\"initialize - {land_unit_short.replace('_', '').lower()} {in_ic_name.replace('_', '').lower()} {var_name.replace('_', '').lower()} - id\",\n",
+    "        assetId = out_path + '/0_id',\n",
+    "        region = out_fc.geometry().buffer(20),\n",
+    "        scale = 22.264,\n",
+    "        maxPixels = 1e13)\n",
+    "    task.start()\n",
+    "\n",
+    "    \n",
+    "# If there is an Image Collection asset at the out_path export time-series images\n",
+    "elif os.system(f\"earthengine asset info {out_path}\") == 0:\n",
+    "    \n",
+    "    print(f\"Appending to Image Collection for dates {start_date} - {end_date}\")\n",
+    "    \n",
+    "    # ----- Preprocess input Image Collection based on path -----\n",
     "    \n",
     "    if in_ic_paths == ['GRIDMET/DROUGHT']:\n",
     "    \n",
@@ -228,7 +228,6 @@
     "    \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
-    "        print(in_dates)\n",
     "    \n",
     "    elif in_ic_paths == ['projects/rap-data-365417/assets/vegetation-cover-v3'] or in_ic_paths == ['projects/rap-data-365417/assets/npp-partitioned-v3']:\n",
     "    \n",
@@ -237,7 +236,6 @@
     "    \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
-    "        print(in_dates)\n",
     "\n",
     "    elif in_ic_paths == ['projects/climate-engine/usdm/weekly']:\n",
     "    \n",
@@ -246,7 +244,6 @@
     "    \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
-    "        print(in_dates)\n",
     "\n",
     "    elif in_ic_paths == ['MODIS/061/MOD11A2']:\n",
     "    \n",
@@ -255,7 +252,6 @@
     "        \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
-    "        print(in_dates)\n",
     "    \n",
     "    elif in_ic_paths == ['MODIS/061/MOD16A2']:\n",
     "        \n",
@@ -264,8 +260,7 @@
     "        \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
-    "        print(in_dates)\n",
-    "    \n",
+    "        \n",
     "\n",
     "    # ---------------------------- Iterate over in_dates with functions ---------------------------------\n",
     "    \n",
@@ -277,11 +272,11 @@
     "        in_i_date = in_i.select([in_date])\n",
     "    \n",
     "        # Create dictionary of properties        \n",
-    "        properties = {'system:index': in_date, 'land_unit': land_unit_long, 'in_fc_path': in_fc_path,\\\n",
+    "        properties = {'system:index': in_date, 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path,\\\n",
     "                      'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'var_type': var_type,\\\n",
     "                      'var_name': var_name}\n",
     "\n",
-    "        if var_type == 'continuous':\n",
+    "        if var_type == 'Continuous':\n",
     "        \n",
     "            # Run function to get time-series statistics for input feature collection\n",
     "            out_fc = eedb_cor.img_to_pts_continuous(in_i_date, in_fc)\n",
@@ -289,7 +284,7 @@
     "            # Convert centroid time-series to image collection time-series\n",
     "            out_i = eedb_cor.pts_to_img_continuous(in_fc = out_fc)\n",
     "        \n",
-    "        elif var_type == 'categorical':\n",
+    "        elif var_type == 'Categorical':\n",
     "        \n",
     "            # Run function to get time-series statistics for input feature collection for continuous variables\n",
     "            out_fc = eedb_cor.img_to_pts_categorical(in_i_date, in_fc)\n",
@@ -301,10 +296,7 @@
     "        out_region = out_fc.geometry().buffer(20)\n",
     "        \n",
     "        # Export the image\n",
-    "        eedb_cor.export_img(out_i = out_i, out_region = out_region, out_path = out_path, out_id = in_date, properties = properties)\n",
-    "\n",
-    "else:\n",
-    "    print('Identify \"initialize\" as your process to run this cell.')"
+    "        eedb_cor.export_img(out_i = out_i, out_region = out_region, out_path = out_path, out_id = in_date, properties = properties)"
    ]
   }
  ],
