--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -6,8 +6,9 @@
    "source": [
     "To dos  \n",
     "1) Handle custom bin widths of histograms for categorical datasets  \n",
-    "2) Generate preprocessing scripts for other datasets \n",
-    "3) Make sure datetimes are set as system:timestart for filtering"
+    "2) Generate preprocessing scripts for other datasets  \n",
+    "3) Make sure datetimes are set as system:timestart for filtering  \n",
+    "4) Assess outputs of 6 month test"
    ]
   },
   {
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -64,11 +65,11 @@
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'MOD16_ET'\n",
+    "in_ic_name = 'USDM'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'ET'\n",
+    "var_name = 'drought'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -94,19 +95,22 @@
     "in_ic_dict = {'GridMET_Drought': {'in_ic_paths': ['GRIDMET/DROUGHT'],\n",
     "                                  'var_names': ['Long_Term_Drought_Blend', 'Short_Term_Drought_Blend'],\n",
     "                                  'var_type': 'Categorical'},\n",
-    "             'RAP_Cover': {'in_ic_paths': ['projects/rap-data-365417/assets/vegetation-cover-v3'],\n",
+    "              'GridMET': {'in_ic_paths': ['IDAHO_EPSCOR/GRIDMET'],\n",
+    "                                  'var_names': ['precip', 'tmmn', 'tmmx', 'eto', 'vpd'],\n",
+    "                                  'var_type': 'Continuous'},\n",
+    "              'RAP_Cover': {'in_ic_paths': ['projects/rap-data-365417/assets/vegetation-cover-v3'],\n",
     "                           'var_names': ['AFG', 'BGR', 'LTR', 'PFG', 'SHR', 'TRE'],\n",
     "                           'var_type': 'Continuous'},\n",
-    "             'RAP_Production': {'in_ic_paths': ['projects/rap-data-365417/assets/npp-partitioned-v3'],\n",
+    "              'RAP_Production': {'in_ic_paths': ['projects/rap-data-365417/assets/npp-partitioned-v3'],\n",
     "                                'var_names': ['afgAGB', 'pfgAGB', 'herbaceousAGB'],\n",
     "                                'var_type': 'Continuous'},\n",
-    "             'USDM': {'in_ic_paths': ['projects/climate-engine/usdm/weekly'],\n",
+    "              'USDM': {'in_ic_paths': ['projects/climate-engine/usdm/weekly'],\n",
     "                      'var_names': ['drought'],\n",
     "                      'var_type': 'Categorical'},\n",
-    "             'MOD11_LST': {'in_ic_paths': ['MODIS/061/MOD11A2'],\n",
+    "              'MOD11_LST': {'in_ic_paths': ['MODIS/061/MOD11A2'],\n",
     "                           'var_names': ['LST_Day_1km'],\n",
     "                           'var_type': 'Continuous'},\n",
-    "             'MOD16_ET': {'in_ic_paths': ['MODIS/061/MOD16A2'],\n",
+    "              'MOD16_ET': {'in_ic_paths': ['MODIS/061/MOD16A2'],\n",
     "                          'var_names': ['ET', 'PET'],\n",
     "                          'var_type': 'Continuous'}}\n",
     "\n",
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,41 +151,44 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-et\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-et\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-04-07T16:16:21.940880Z\"\n",
+      "  \"updateTime\": \"2023-04-07T19:36:44.135470Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-et\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mod16et-et\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-04-07T16:16:21.940880Z\"\n",
+      "  \"updateTime\": \"2023-04-07T19:36:44.135470Z\"\n",
       "}\n",
       "Appending to Image Collection for dates 2022-01-01 00:00:00 - 2022-07-01 00:00:00\n",
-      "Running 20220101\n",
-      "Running 20220109\n",
-      "Running 20220117\n",
+      "Running 20220104\n",
+      "Running 20220111\n",
+      "Running 20220118\n",
       "Running 20220125\n",
-      "Running 20220202\n",
-      "Running 20220210\n",
-      "Running 20220218\n",
-      "Running 20220226\n",
-      "Running 20220306\n",
-      "Running 20220314\n",
+      "Running 20220201\n",
+      "Running 20220208\n",
+      "Running 20220215\n",
+      "Running 20220222\n",
+      "Running 20220301\n",
+      "Running 20220308\n",
+      "Running 20220315\n",
       "Running 20220322\n",
-      "Running 20220330\n",
-      "Running 20220407\n",
-      "Running 20220415\n",
-      "Running 20220423\n",
-      "Running 20220501\n",
-      "Running 20220509\n",
+      "Running 20220329\n",
+      "Running 20220405\n",
+      "Running 20220412\n",
+      "Running 20220419\n",
+      "Running 20220426\n",
+      "Running 20220503\n",
+      "Running 20220510\n",
       "Running 20220517\n",
-      "Running 20220525\n",
-      "Running 20220602\n",
-      "Running 20220610\n",
-      "Running 20220618\n",
-      "Running 20220626\n"
+      "Running 20220524\n",
+      "Running 20220531\n",
+      "Running 20220607\n",
+      "Running 20220614\n",
+      "Running 20220621\n",
+      "Running 20220628\n"
      ]
     }
    ],
@@ -225,6 +232,14 @@
     "    \n",
     "        # Run function to pre-process the GridMET drought data\n",
     "        in_i = eedb_col.preprocess_gm_drought(in_ic_paths, var_name, start_date, end_date)\n",
+    "    \n",
+    "        # Get list of date strings from image\n",
+    "        in_dates = in_i.bandNames().getInfo()\n",
+    "        \n",
+    "    elif in_ic_paths == ['IDAHO_EPSCOR/GRIDMET']:\n",
+    "    \n",
+    "        # Run function to pre-process the GridMET drought data\n",
+    "        in_i = eedb_col.preprocess_gm(in_ic_paths, var_name, start_date, end_date)\n",
     "    \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
@@ -287,10 +302,10 @@
     "        elif var_type == 'Categorical':\n",
     "        \n",
     "            # Run function to get time-series statistics for input feature collection for continuous variables\n",
-    "            out_fc = eedb_cor.img_to_pts_categorical(in_i_date, in_fc)\n",
+    "            out_fc = eedb_cor.img_to_pts_categorical(in_i_date, in_fc, in_ic_name = in_ic_name)\n",
     "       \n",
     "            # Convert centroid time-series to image collection time-series\n",
-    "            out_i = eedb_cor.pts_to_img_categorical(in_fc = out_fc)\n",
+    "            out_i = eedb_cor.pts_to_img_categorical(in_fc = out_fc, in_ic_name = in_ic_name)\n",
     "        \n",
     "        # Create out region for export\n",
     "        out_region = out_fc.geometry().buffer(20)\n",
