Add preprocess_lsndvi function

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -110,6 +110,9 @@
     "              'MOD11_LST': {'in_ic_paths': ['MODIS/061/MOD11A2'],\n",
     "                           'var_names': ['LST_Day_1km'],\n",
     "                           'var_type': 'Continuous'},\n",
+    "              'LS_NDVI': {'in_ic_paths': ['LANDSAT/LT05/C02/T1_L2', 'LANDSAT/LE07/C02/T1_L2', 'LANDSAT/LC08/C02/T1_L2', 'LANDSAT/LC09/C02/T1_L2'],\n",
+    "                           'var_names': ['NDVI'],\n",
+    "                           'var_type': 'Continuous'},\n",
     "              'MOD16_ET': {'in_ic_paths': ['MODIS/061/MOD16A2'],\n",
     "                          'var_names': ['ET', 'PET'],\n",
     "                          'var_type': 'Continuous'}}\n",
@@ -268,8 +271,16 @@
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
     "    \n",
-    "    elif in_ic_paths == ['MODIS/061/MOD16A2']:\n",
+    "    elif in_ic_paths == ['LANDSAT/LT05/C02/T1_L2', 'LANDSAT/LE07/C02/T1_L2', 'LANDSAT/LC08/C02/T1_L2', 'LANDSAT/LC09/C02/T1_L2']:\n",
+    "    \n",
+    "        # Run function to pre-process the Landsat SR NDVI data\n",
+    "        in_i = eedb_col.preprocess_lsndvi(in_ic_paths, var_name, start_date, end_date)\n",
     "        \n",
+    "        # Get list of date strings from image\n",
+    "        in_dates = in_i.bandNames().getInfo()\n",
+    "        \n",
+    "    elif in_ic_paths == ['MODIS/061/MOD16A2']:\n",
+    "    \n",
     "        # Run function to pre-process the GridMET drought data\n",
     "        in_i = eedb_col.preprocess_modet(in_ic_paths, var_name, start_date, end_date)\n",
     "        \n",
