--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -104,6 +104,9 @@
     "              'RAP_Production': {'in_ic_paths': ['projects/rap-data-365417/assets/npp-partitioned-v3'],\n",
     "                                'var_names': ['afgAGB', 'pfgAGB', 'herbaceousAGB'],\n",
     "                                'var_type': 'Continuous'},\n",
+    "              'RAP16_Production': {'in_ic_paths': ['projects/rap-data-365417/assets/npp-partitioned-16day-v3'],\n",
+    "                                'var_names': ['afgAGB', 'pfgAGB', 'herbaceousAGB'],\n",
+    "                                'var_type': 'Continuous'},\n",
     "              'USDM': {'in_ic_paths': ['projects/climate-engine/usdm/weekly'],\n",
     "                      'var_names': ['drought'],\n",
     "                      'var_type': 'Categorical'},\n",
@@ -247,7 +250,7 @@
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
     "    \n",
-    "    elif in_ic_paths == ['projects/rap-data-365417/assets/vegetation-cover-v3'] or in_ic_paths == ['projects/rap-data-365417/assets/npp-partitioned-v3']:\n",
+    "    elif in_ic_paths == ['projects/rap-data-365417/assets/vegetation-cover-v3'] or in_ic_paths == ['projects/rap-data-365417/assets/npp-partitioned-v3'] or in_ic_paths == ['projects/rap-data-365417/assets/npp-partitioned-16day-v3']:\n",
     "    \n",
     "        # Run function to pre-process the GridMET drought data\n",
     "        in_i = eedb_col.preprocess_rap(in_ic_paths, var_name, start_date, end_date)\n",
