LS_NDVI Preprocessing Updates
LS_NDVI Preprocessing Updates

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "id": "zQPixTuOF658"
    },
@@ -57,7 +57,7 @@
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(2022, 6, 1)\n",
+    "start_date = datetime.datetime(2022, 1, 1)\n",
     "end_date = datetime.datetime(2022, 7, 1)\n",
     "\n",
     "\n",
@@ -65,11 +65,11 @@
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'GridMET'\n",
+    "in_ic_name = 'LS_NDVI'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'precip'\n",
+    "var_name = 'NDVI'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,24 +157,31 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-gridmet-precip\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-gridmet-precip\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-lsndvi-ndvi\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-lsndvi-ndvi\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-11T20:21:21.658482Z\"\n",
+      "  \"updateTime\": \"2023-04-28T17:32:30.746081Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-gridmet-precip\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-gridmet-precip\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-lsndvi-ndvi\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-lsndvi-ndvi\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-05-11T20:21:21.658482Z\"\n",
+      "  \"updateTime\": \"2023-04-28T17:32:30.746081Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2022-06-01 00:00:00 - 2022-07-01 00:00:00\n",
-      "Running 20220604\n",
-      "Running 20220609\n",
-      "Running 20220614\n",
-      "Running 20220619\n",
-      "Running 20220624\n",
-      "Running 20220629\n"
+      "Appending to Image Collection for dates 2022-01-01 00:00:00 - 2022-07-01 00:00:00\n",
+      "111319.49079327357\n",
+      "Running 20220101\n",
+      "Running 20220117\n",
+      "Running 20220202\n",
+      "Running 20220218\n",
+      "Running 20220306\n",
+      "Running 20220322\n",
+      "Running 20220407\n",
+      "Running 20220423\n",
+      "Running 20220509\n",
+      "Running 20220525\n",
+      "Running 20220610\n",
+      "Running 20220626\n"
      ]
     }
    ],
@@ -218,7 +225,7 @@
     "    \n",
     "        # Run function to pre-process the GridMET drought data\n",
     "        in_i = eedb_col.preprocess_gm_drought(in_ic_paths, var_name, start_date, end_date)\n",
-    "    \n",
+    "        \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
     "        \n",
@@ -258,7 +265,8 @@
     "    \n",
     "        # Run function to pre-process the Landsat SR NDVI data\n",
     "        in_i = eedb_col.preprocess_lsndvi(in_ic_paths, var_name, start_date, end_date)\n",
-    "        \n",
+    "        print(in_i.projection().nominalScale().getInfo())\n",
+    "    \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
     "        \n",
@@ -307,6 +315,13 @@
     "        # Export the image\n",
     "        eedb_cor.export_img(out_i = out_i, out_region = out_region, out_path = out_path, out_id = in_date, properties = properties)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -330,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
