Added variable units and resolution as variables, fixed band names, converted units for temp variables,

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -8,12 +8,13 @@
     "1) Handle custom bin widths of histograms for categorical datasets  \n",
     "2) Generate preprocessing scripts for other datasets  \n",
     "3) Make sure datetimes are set as system:timestart for filtering  \n",
-    "4) Assess outputs of 6 month test"
+    "4) Incorporate notes: https://docs.google.com/document/d/1WMLKJiXq87lZbjD6lXSeodNaR30Oh1TTlfnikyNvuvM/edit\n",
+    "    Check that changes are working okay"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "pT6KulIXmSWZ"
    },
@@ -48,11 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "id": "zQPixTuOF658"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unitless\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
@@ -87,11 +96,9 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "# ---------------------------- Additional parameters derived from above --------------------------------\n",
     "\n",
-    "# Define input Image Collection paths using dataset dictionary\n",
+    "# Define input Image Collection variables using dataset dictionary\n",
     "in_ic_dict = {'GridMET_Drought': {'in_ic_paths': ['GRIDMET/DROUGHT'],\n",
     "                                  'var_names': ['Long_Term_Drought_Blend', 'Short_Term_Drought_Blend'],\n",
     "                                  'var_type': 'Categorical'},\n",
@@ -120,6 +127,29 @@
     "                          'var_names': ['ET', 'PET'],\n",
     "                          'var_type': 'Continuous'}}\n",
     "\n",
+    "# Define properties for variables in dictionary\n",
+    "var_dict = {'Long_Term_Drought_Blend': {'units': 'classification'},\n",
+    "            'Short_Term_Drought_Blend': {'units': 'classification'},\n",
+    "            'precip': {'units': 'mm'},\n",
+    "            'tmmn': {'units': 'degrees C'},\n",
+    "            'tmmx': {'units': 'degrees C'},\n",
+    "            'eto': {'units': 'mm'},\n",
+    "            'vpd': {'units': 'kPa'},\n",
+    "            'AFG': {'units': '% cover'},\n",
+    "            'BGR': {'units': '% cover'},\n",
+    "            'LTR': {'units': '% cover'},\n",
+    "            'PFG': {'units': '% cover'},\n",
+    "            'SHR': {'units': '% cover'},\n",
+    "            'TRE': {'units': '% cover'},\n",
+    "            'afgAGB': {'units': 'lbs/acre'},\n",
+    "            'pfgAGB': {'units': 'lbs/acre'},\n",
+    "            'herbaceousAGB': {'units': 'lbs/acre'},\n",
+    "            'drought': {'units': 'classification'},\n",
+    "            'LST_Day_1km': {'units': 'degrees C'},\n",
+    "            'NDVI': {'units': 'unitless'},\n",
+    "            'ET': {'units': 'mm'},\n",
+    "            'PET': {'units': 'mm'}}\n",
+    "\n",
     "# Define land unit names\n",
     "if(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons-simplified-clean'):\n",
     "    land_unit_long = 'BLM_Natl_Grazing_Allotment_Polygons'\n",
@@ -136,8 +166,11 @@
     "    \n",
     "# Pull out additional variables needed to run exports\n",
     "in_ic_paths = in_ic_dict.get(in_ic_name).get('in_ic_paths')\n",
+    "in_ic_res = ee.ImageCollection(in_ic_paths[0]).first().projection().nominalScale().getInfo()\n",
     "var_type = in_ic_dict.get(in_ic_name).get('var_type')\n",
-    "out_path = f\"projects/dri-apps/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\""
+    "var_units = var_dict.get(var_name).get('units')\n",
+    "out_path = f\"projects/dri-apps/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\"\n",
+    "print(var_units)"
    ]
   },
   {
@@ -193,7 +226,7 @@
     "    \n",
     "    # Create dictionary of properties\n",
     "    properties = {'system:index': '0_id', 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path, 'in_fc_id': in_fc_id,\n",
-    "                  'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'var_type': var_type, 'var_name': var_name}\n",
+    "                  'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type, 'var_name': var_name', var_units': var_units}\n",
     "    \n",
     "    # Apply ID image function to input feature collection\n",
     "    out_list = eedb_cor.generate_id_img(in_fc = in_fc, in_fc_id = in_fc_id)\n",
@@ -290,8 +323,8 @@
     "    \n",
     "        # Create dictionary of properties        \n",
     "        properties = {'system:index': in_date, 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path,\\\n",
-    "                      'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'var_type': var_type,\\\n",
-    "                      'var_name': var_name}\n",
+    "                      'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type,\\\n",
+    "                      'var_name': var_name, var_units': var_units}\n",
     "\n",
     "        if var_type == 'Continuous':\n",
     "        \n",
@@ -345,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
