Debugged USDM issue

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "pT6KulIXmSWZ"
    },
@@ -49,36 +49,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "id": "zQPixTuOF658"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "unitless\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
     "# Define time period to export\n",
     "start_date = datetime.datetime(2022, 1, 1)\n",
-    "end_date = datetime.datetime(2022, 7, 1)\n",
+    "end_date = datetime.datetime(2022, 2, 1)\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'LS_NDVI'\n",
+    "in_ic_name = 'USDM'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'NDVI'\n",
+    "var_name = 'drought'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -169,8 +161,54 @@
     "in_ic_res = ee.ImageCollection(in_ic_paths[0]).first().projection().nominalScale().getInfo()\n",
     "var_type = in_ic_dict.get(in_ic_name).get('var_type')\n",
     "var_units = var_dict.get(var_name).get('units')\n",
-    "out_path = f\"projects/dri-apps/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\"\n",
-    "print(var_units)"
+    "out_path = f\"projects/dri-apps/assets/blm-database/{land_unit_short.replace('_', '').lower()}-{in_ic_name.replace('_', '').lower()}-{var_name.replace('_', '').lower()}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['20220104', '20220111', '20220118', '20220125']\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "50b919c44e5f4a42b84fe42a69c4786c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[20, 0], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children=(Togg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "if in_ic_paths == ['projects/climate-engine/usdm/weekly']:\n",
+    "\n",
+    "    # Run function to pre-process the GridMET drought data\n",
+    "    in_i = eedb_col.preprocess_usdm(in_ic_paths, var_name, start_date, end_date)\n",
+    "\n",
+    "    # Get list of date strings from image\n",
+    "    in_dates = in_i.bandNames().getInfo()\n",
+    "print(in_dates)\n",
+    "\n",
+    "vis = {\n",
+    "'min': -4,\n",
+    "'max': 4,\n",
+    "'palette': ['006633', 'E5FFCC', '662A00', 'D8D8D8', 'F5F5F5']}\n",
+    "\n",
+    "img = in_i.select([in_dates[0]])\n",
+    "Map.addLayer(img, vis, 'usdm', True, 0.5)\n",
+    "Map"
    ]
   },
   {
@@ -182,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -190,31 +228,22 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-lsndvi-ndvi\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-lsndvi-ndvi\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-04-28T17:32:30.746081Z\"\n",
+      "  \"updateTime\": \"2023-04-07T19:36:44.135470Z\"\n",
       "}\n",
       "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-lsndvi-ndvi\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-lsndvi-ndvi\",\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
       "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-04-28T17:32:30.746081Z\"\n",
+      "  \"updateTime\": \"2023-04-07T19:36:44.135470Z\"\n",
       "}\n",
-      "Appending to Image Collection for dates 2022-01-01 00:00:00 - 2022-07-01 00:00:00\n",
-      "111319.49079327357\n",
-      "Running 20220101\n",
-      "Running 20220117\n",
-      "Running 20220202\n",
-      "Running 20220218\n",
-      "Running 20220306\n",
-      "Running 20220322\n",
-      "Running 20220407\n",
-      "Running 20220423\n",
-      "Running 20220509\n",
-      "Running 20220525\n",
-      "Running 20220610\n",
-      "Running 20220626\n"
+      "Appending to Image Collection for dates 2022-01-01 00:00:00 - 2022-02-01 00:00:00\n",
+      "Running 20220104\n",
+      "Running 20220111\n",
+      "Running 20220118\n",
+      "Running 20220125\n"
      ]
     }
    ],
@@ -226,7 +255,7 @@
     "    \n",
     "    # Create dictionary of properties\n",
     "    properties = {'system:index': '0_id', 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path, 'in_fc_id': in_fc_id,\n",
-    "                  'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type, 'var_name': var_name', var_units': var_units}\n",
+    "                  'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type, 'var_name': var_name, 'var_units': var_units}\n",
     "    \n",
     "    # Apply ID image function to input feature collection\n",
     "    out_list = eedb_cor.generate_id_img(in_fc = in_fc, in_fc_id = in_fc_id)\n",
@@ -324,7 +353,7 @@
     "        # Create dictionary of properties        \n",
     "        properties = {'system:index': in_date, 'land_unit_long': land_unit_long, 'land_unit_short': land_unit_short, 'in_fc_path': in_fc_path,\\\n",
     "                      'in_fc_id': in_fc_id, 'in_ic_paths': in_ic_paths[0], 'in_ic_name': in_ic_name, 'in_ic_res': in_ic_res, 'var_type': var_type,\\\n",
-    "                      'var_name': var_name, var_units': var_units}\n",
+    "                      'var_name': var_name, 'var_units': var_units}\n",
     "\n",
     "        if var_type == 'Continuous':\n",
     "        \n",
@@ -348,13 +377,6 @@
     "        # Export the image\n",
     "        eedb_cor.export_img(out_i = out_i, out_region = out_region, out_path = out_path, out_id = in_date, properties = properties)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
