--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -66,11 +66,11 @@
     "\n",
     "# Define input dataset\n",
     "# See dictionary below for list of input datasets\n",
-    "in_ic_name = 'USDM'\n",
+    "in_ic_name = 'MTBS'\n",
     "\n",
     "# Define variable from dataset\n",
     "# See dictionary below for variables available for each dataset\n",
-    "var_name = 'drought'\n",
+    "var_name = 'Severity'\n",
     "\n",
     "\n",
     "# ------------------------------- Define input Feature Collection ---------------------------------------\n",
@@ -117,11 +117,14 @@
     "                           'var_type': 'Continuous'},\n",
     "              'MOD16_ET': {'in_ic_paths': ['MODIS/061/MOD16A2'],\n",
     "                          'var_names': ['ET', 'PET'],\n",
-    "                          'var_type': 'Continuous'}}\n",
+    "                          'var_type': 'Continuous'},\n",
+    "              'MTBS': {'in_ic_paths': ['projects/climate-engine-pro/assets/mtbs_mosaics_annual'],\n",
+    "                       'var_names': ['Severity'],\n",
+    "                       'var_type': 'Categorical'}}\n",
     "\n",
     "# Define properties for variables in dictionary\n",
-    "var_dict = {'Long_Term_Drought_Blend': {'units': 'classification'},\n",
-    "            'Short_Term_Drought_Blend': {'units': 'classification'},\n",
+    "var_dict = {'Long_Term_Drought_Blend': {'units': 'drought'},\n",
+    "            'Short_Term_Drought_Blend': {'units': 'drought'},\n",
     "            'precip': {'units': 'mm'},\n",
     "            'tmmn': {'units': 'degrees C'},\n",
     "            'tmmx': {'units': 'degrees C'},\n",
@@ -136,11 +139,12 @@
     "            'afgAGB': {'units': 'lbs/acre'},\n",
     "            'pfgAGB': {'units': 'lbs/acre'},\n",
     "            'herbaceousAGB': {'units': 'lbs/acre'},\n",
-    "            'drought': {'units': 'classification'},\n",
+    "            'drought': {'units': 'drought'},\n",
     "            'LST_Day_1km': {'units': 'degrees C'},\n",
     "            'NDVI': {'units': 'unitless'},\n",
     "            'ET': {'units': 'mm'},\n",
-    "            'PET': {'units': 'mm'}}\n",
+    "            'PET': {'units': 'mm'},\n",
+    "            'Severity': {'units': 'fire severity'}}\n",
     "\n",
     "# Define land unit names\n",
     "if(in_fc_path == 'projects/dri-apps/assets/blm-admin/blm-natl-grazing-allotment-polygons-simplified-clean'):\n",
@@ -165,53 +169,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['20220104', '20220111', '20220118', '20220125']\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50b919c44e5f4a42b84fe42a69c4786c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[20, 0], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children=(Togg…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "if in_ic_paths == ['projects/climate-engine/usdm/weekly']:\n",
-    "\n",
-    "    # Run function to pre-process the GridMET drought data\n",
-    "    in_i = eedb_col.preprocess_usdm(in_ic_paths, var_name, start_date, end_date)\n",
-    "\n",
-    "    # Get list of date strings from image\n",
-    "    in_dates = in_i.bandNames().getInfo()\n",
-    "print(in_dates)\n",
-    "\n",
-    "vis = {\n",
-    "'min': -4,\n",
-    "'max': 4,\n",
-    "'palette': ['006633', 'E5FFCC', '662A00', 'D8D8D8', 'F5F5F5']}\n",
-    "\n",
-    "img = in_i.select([in_dates[0]])\n",
-    "Map.addLayer(img, vis, 'usdm', True, 0.5)\n",
-    "Map"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,23 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
-      "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-04-07T19:36:44.135470Z\"\n",
-      "}\n",
-      "{\n",
-      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
-      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-usdm-drought\",\n",
-      "  \"type\": \"IMAGE_COLLECTION\",\n",
-      "  \"updateTime\": \"2023-04-07T19:36:44.135470Z\"\n",
-      "}\n",
-      "Appending to Image Collection for dates 2022-01-01 00:00:00 - 2022-02-01 00:00:00\n",
-      "Running 20220104\n",
-      "Running 20220111\n",
-      "Running 20220118\n",
-      "Running 20220125\n"
+      "Asset does not exist or is not accessible: projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\n",
+      "Initializing Image Collection by creating EE asset and exporting ID image\n"
      ]
     }
    ],
@@ -337,6 +279,14 @@
     "        # Run function to pre-process the GridMET drought data\n",
     "        in_i = eedb_col.preprocess_modet(in_ic_paths, var_name, start_date, end_date)\n",
     "        \n",
+    "        # Get list of date strings from image\n",
+    "        in_dates = in_i.bandNames().getInfo()\n",
+    "    \n",
+    "    elif in_ic_paths == ['projects/climate-engine-pro/assets/mtbs_mosaics_annual']:\n",
+    "    \n",
+    "        # Run function to pre-process the GridMET drought data\n",
+    "        in_i = eedb_col.preprocess_mtbs(in_ic_paths, var_name, start_date, end_date)\n",
+    "    \n",
     "        # Get list of date strings from image\n",
     "        in_dates = in_i.bandNames().getInfo()\n",
     "\n",
