Updates to MTBS function/comments

--- a/Export_EEPixel_Timeseries_ImageCollection.ipynb
+++ b/Export_EEPixel_Timeseries_ImageCollection.ipynb
@@ -58,8 +58,8 @@
     "# ------------------------------------- Define parameters -----------------------------------------------\n",
     "\n",
     "# Define time period to export\n",
-    "start_date = datetime.datetime(2022, 1, 1)\n",
-    "end_date = datetime.datetime(2022, 2, 1)\n",
+    "start_date = datetime.datetime(2020, 1, 1)\n",
+    "end_date = datetime.datetime(2021, 2, 1)\n",
     "\n",
     "\n",
     "# -------------------------------- Define input Image Collection ----------------------------------------\n",
@@ -184,8 +184,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Asset does not exist or is not accessible: projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\n",
-      "Initializing Image Collection by creating EE asset and exporting ID image\n"
+      "{\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\",\n",
+      "  \"type\": \"IMAGE_COLLECTION\",\n",
+      "  \"updateTime\": \"2023-05-18T20:02:05.027494Z\"\n",
+      "}\n",
+      "{\n",
+      "  \"id\": \"projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\",\n",
+      "  \"name\": \"projects/dri-apps/assets/blm-database/blmallotments-mtbs-severity\",\n",
+      "  \"type\": \"IMAGE_COLLECTION\",\n",
+      "  \"updateTime\": \"2023-05-18T20:02:05.027494Z\"\n",
+      "}\n",
+      "Appending to Image Collection for dates 2020-01-01 00:00:00 - 2021-02-01 00:00:00\n",
+      "Running 20200101\n"
      ]
     }
    ],
